@@ -31,11 +31,17 @@ import java.util.List;
 import java.util.Objects;
 
 import jdk.jfr.internal.AnnotationConstruct;
+import jdk.jfr.internal.SecuritySupport;
 import jdk.jfr.internal.Type;
-import jdk.jfr.internal.Utils;
+import jdk.jfr.internal.util.Utils;
 
 /**
  * Describes the event fields and annotation elements.
+ * <p>
+ * The following example shows how the {@code ValueDescriptor} class can
+ * be used to list field information of all types.
+ *
+ * {@snippet class="Snippets" region="ValueDescriptorOverview"}
  *
  * @since 9
  */
@@ -144,7 +150,7 @@ public final class ValueDescriptor {
         Objects.requireNonNull(type, "type");
         Objects.requireNonNull(name, "name");
         Objects.requireNonNull(annotations, "annotations");
-        Utils.checkRegisterPermission();
+        SecuritySupport.checkRegisterPermission();
         if (!allowArray) {
             if (type.isArray()) {
                 throw new IllegalArgumentException("Array types are not allowed");
@@ -245,7 +251,7 @@ public final class ValueDescriptor {
      */
     public String getTypeName() {
         if (type.isSimpleType()) {
-            return type.getFields().get(0).getTypeName();
+            return type.getFields().getFirst().getTypeName();
         }
         return type.getName();
     }
