@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,16 +25,16 @@
  * @test id=default
  * @summary Test verifies that selfsuspend doesn' block unmount by VTMTDisabler
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} SelfSuspendDisablerTest.java
- * @run main/othervm/native --enable-preview -agentlib:SelfSuspendDisablerTest SelfSuspendDisablerTest
+ * @compile SelfSuspendDisablerTest.java
+ * @run main/othervm/native -agentlib:SelfSuspendDisablerTest SelfSuspendDisablerTest
  */
 
 /*
  * @test id=no-vmcontinuations
  * @requires vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} SelfSuspendDisablerTest.java
- * @run main/othervm/native --enable-preview -agentlib:SelfSuspendDisablerTest -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations SelfSuspendDisablerTest
+ * @compile SelfSuspendDisablerTest.java
+ * @run main/othervm/native -agentlib:SelfSuspendDisablerTest -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations SelfSuspendDisablerTest
  */
 
 public class SelfSuspendDisablerTest {
