@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -163,10 +163,8 @@ public class Launcher extends DebugeeBinder {
         args.add(jdbExecPath.trim());
 
         if (argumentHandler.isLaunchingConnector()) {
-            boolean vthreadMode = "Virtual".equals(System.getProperty("main.wrapper"));
+            boolean vthreadMode = "Virtual".equals(System.getProperty("test.thread.factory"));
             if (vthreadMode) {
-                /* Need --enable-preview on the debuggee in order to support virtual threads. */
-                args.add("-R--enable-preview");
                 /* Some tests need more carrier threads than the default provided. */
                 args.add("-R-Djdk.virtualThreadScheduler.parallelism=15");
             }
@@ -228,8 +226,12 @@ public class Launcher extends DebugeeBinder {
                     }
                 }
                 String cmdline = classToExecute + " " + ArgumentHandler.joinArguments(argumentHandler.getArguments(), " ");
-                if (System.getProperty("main.wrapper") != null) {
-                    cmdline = MainWrapper.class.getName() + " " + System.getProperty("main.wrapper") +  " " + cmdline;
+                cmdline += " -waittime " + argumentHandler.getWaitTime();
+                if (argumentHandler.verbose()) {
+                    cmdline += " -verbose";
+                }
+                if (System.getProperty("test.thread.factory") != null) {
+                    cmdline = MainWrapper.class.getName() + " " + System.getProperty("test.thread.factory") +  " " + cmdline;
                 }
                 connect.append(",main=" + cmdline.trim());
 
