@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -72,7 +72,7 @@ public class TestDestReadOnly {
         Asserts.assertTrue(Files.exists(dest), "No recording file: " + dest);
         List<RecordedEvent> events = RecordingFile.readAllEvents(dest);
         Asserts.assertFalse(events.isEmpty(), "No event found");
-        System.out.printf("Found event %s in %s%n", events.get(0).getEventType().getName(), dest.toString());
+        System.out.printf("Found event %s in %s%n", events.getFirst().getEventType().getName(), dest.toString());
     }
 
     private static void verifyException(VoidFunction f, String msg) throws Throwable {
