@@ -29,7 +29,12 @@
  * @modules jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.compiler/com.sun.tools.javac.util
- *          jdk.jdeps/com.sun.tools.classfile
+ *          java.base/jdk.internal.classfile
+ *          java.base/jdk.internal.classfile.attribute
+ *          java.base/jdk.internal.classfile.constantpool
+ *          java.base/jdk.internal.classfile.instruction
+ *          java.base/jdk.internal.classfile.components
+ *          java.base/jdk.internal.classfile.impl
  * @build toolbox.ToolBox InMemoryFileManager TestBase
  * @build LineNumberTestBase TestCase
  * @run main RuleSwitchBreaks
@@ -81,7 +86,7 @@ public class RuleSwitchBreaks extends LineNumberTestBase {
                      """,
                      List.of(1, 3, 4, 5, 6, 7, 9, 11),
                      true,
-                     List.of("--enable-preview", "-source", System.getProperty("java.specification.version")),
+                     List.of(),
                      "TestGuards")
     };
 
